@@ -1,3 +1,7 @@
+2018-11-07 Marco Bodrato <bodrato@mail.dm.unipi.it>
+
+	* mini-gmp/mini-gmp.c: Silence a couple of warnings.
+
 2018-10-30 Marco Bodrato <bodrato@mail.dm.unipi.it>
 
 	* mini-gmp.c (mpz_probab_prime_p): BPSW test for primality.
